src/test/resources/public/input/typechecking/fail/unknown_type/fail06.jova
class Known {

}

class Test {
   Test(Unknown a, Unknown2 b) {

   }
}
